Update tests to JUnit 5.
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>